--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 #
 # earlier versions of Drupal are tracked in `community/PHP/`
 
+# Ignore ddev config files
+/.ddev
+
+
 # Ignore configuration files that may contain sensitive information
 /sites/*/*settings*.php
 /sites/*/*services*.yml
@@ -12,6 +16,8 @@
 /sites/*/private
 /sites/*/files-public
 /sites/*/files-private
+/private-files/backup_migrate/*
+
 
 # Ignore paths that may contain temporary files
 /sites/*/translations
@@ -23,13 +29,15 @@
 
 # Ignore drupal core (if not versioning drupal sources)
 /core
-/modules/README.txt
+/libraries
+/modules/*
+/themes/README.txt
+/themes/contrib/*
 /profiles/README.txt
 /sites/README.txt
 /sites/example.sites.php
 /sites/example.settings.local.php
 /sites/development.services.yml
-/themes/README.txt
 /vendor
 /.csslintrc
 /.editorconfig
@@ -38,8 +46,8 @@
 /.gitattributes
 /.htaccess
 /autoload.php
-/composer.json
-/composer.lock
+# /composer.json
+# /composer.lock
 /example.gitignore
 /index.php
 /LICENSE.txt
@@ -47,3 +55,12 @@
 /robots.txt
 /update.php
 /web.config
+/.ht.router.php
+/INSTALL.txt
+
+# Allow these files
+!/.cpanel.yml
+!/sync/*
+!/libraries/jqueryinstagramfeed/*
+!/libraries/slick/*
+!/sites/default/settings.local.php
