--- a/sync/user.role.anonymous.yml
+++ b/sync/user.role.anonymous.yml
@@ -11,6 +11,7 @@ dependencies:
     - media
     - search
     - system
+    - workflow
 _core:
   default_config_hash: 6WavjUYXIegP9AAg2zXGx54MWIVoomC3SZhNiqe-Dyk
 id: anonymous
@@ -24,3 +25,4 @@ permissions:
   - 'search content'
   - 'use text format restricted_html'
   - 'view media'
+  - 'create patches workflow_transition'
