--- a/sync/user.role.content_editor.yml
+++ b/sync/user.role.content_editor.yml
@@ -16,6 +16,7 @@ dependencies:
     - taxonomy
     - toolbar
     - tour
+    - workflow
 _core:
   default_config_hash: Wur9kcEOwY1Jal81NssKnz3RhVJxAvBwyWQBGcA_1Go
 id: content_editor
@@ -46,3 +47,4 @@ permissions:
   - 'view all revisions'
   - 'view own unpublished content'
   - 'view the administration theme'
+  - 'create patches workflow_transition'
