--- a/sync/core.extension.yml
+++ b/sync/core.extension.yml
@@ -37,6 +37,7 @@ module:
   path: 0
   path_alias: 0
   responsive_image: 0
+  rules: 0
   search: 0
   shortcut: 0
   statistics: 0
@@ -46,11 +47,10 @@ module:
   text: 0
   toolbar: 0
   tour: 0
+  typed_data: 0
   update: 0
   user: 0
   views_ui: 0
-  workflow: 0
-  workflow_notifications: 0
   views: 10
   standard: 1000
 theme:
