--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "composer/installers": "^1.9",
         "drupal/admin_toolbar": "^3.0",
         "drupal/backup_migrate": "^5.0@RC",
-        "drupal/better_exposed_filters": "^5.0",
+        "drupal/better_exposed_filters": "^6.0",
         "drupal/bootstrap5": "^3.0",
         "drupal/captcha": "^1.2",
         "drupal/core-composer-scaffold": "^9.1",
@@ -26,9 +26,11 @@
         "drupal/core-recommended": "^9.1",
         "drupal/core-vendor-hardening": "^9.1",
         "drupal/ctools": "^3.6",
+        "drupal/download_count": "^2.0",
         "drupal/google_analytics": "^3.1",
         "drupal/honeypot": "^2.0",
         "drupal/pathauto": "^1.8",
+        "drupal/private_files_download_permission": "^3.0",
         "drupal/recaptcha": "^3.0",
         "drupal/responsive_menu": "^4.4",
         "drupal/rules": "3.x-dev@dev",
