--- a/sync/core.extension.yml
+++ b/sync/core.extension.yml
@@ -5,6 +5,7 @@ module:
   admin_toolbar_tools: 0
   automated_cron: 0
   backup_migrate: 0
+  better_exposed_filters: 0
   big_pipe: 0
   block: 0
   block_content: 0
@@ -16,6 +17,7 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
+  download_count: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
@@ -25,6 +27,10 @@ module:
   help: 0
   history: 0
   image: 0
+  jquery_ui: 0
+  jquery_ui_datepicker: 0
+  jquery_ui_slider: 0
+  jquery_ui_touch_punch: 0
   link: 0
   media: 0
   media_library: 0
@@ -36,6 +42,7 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  pfdp: 0
   responsive_image: 0
   rules: 0
   search: 0
