--- a/sync/core.entity_form_display.node.patch.default.yml
+++ b/sync/core.entity_form_display.node.patch.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.patch.field_band
     - field.field.node.patch.field_bassist
     - field.field.node.patch.field_description
+    - field.field.node.patch.field_effects_used
     - field.field.node.patch.field_patch_file
     - field.field.node.patch.field_song
     - field.field.node.patch.field_style
@@ -20,7 +21,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -35,8 +36,8 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_bassist:
-    type: entity_reference_autocomplete
-    weight: 27
+    type: entity_reference_autocomplete_tags
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
@@ -46,22 +47,28 @@ content:
     third_party_settings: {  }
   field_description:
     type: string_textarea
-    weight: 26
+    weight: 2
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+  field_effects_used:
+    type: options_buttons
+    weight: 7
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_patch_file:
     type: file_generic
-    weight: 29
+    weight: 1
     region: content
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
   field_song:
     type: entity_reference_autocomplete
-    weight: 28
+    weight: 4
     region: content
     settings:
       match_operator: CONTAINS
@@ -71,33 +78,33 @@ content:
     third_party_settings: {  }
   field_style:
     type: options_buttons
-    weight: 4
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 9
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
-    type: boolean_checkbox
-    weight: 7
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
-  status:
     type: boolean_checkbox
     weight: 10
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
+  status:
+    type: boolean_checkbox
+    weight: 13
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 8
+    weight: 11
     region: content
     settings:
       display_label: true
@@ -112,7 +119,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 8
     region: content
     settings:
       match_operator: CONTAINS
