--- a/sync/views.view.patch_library.yml
+++ b/sync/views.view.patch_library.yml
@@ -489,7 +489,7 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: field
-          label: ''
+          label: Download
           exclude: false
           alter:
             alter_text: false
@@ -522,7 +522,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
