--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "drupal/ctools": "^3.6",
         "drupal/download_count": "^2.0",
         "drupal/honeypot": "^2.0",
+        "drupal/httpswww": "^2.1",
         "drupal/pathauto": "^1.8",
         "drupal/private_files_download_permission": "^3.0",
         "drupal/recaptcha": "^3.0",
