--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,17 @@
     ],
     "require": {
         "composer/installers": "^1.9",
+        "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.0",
         "drupal/backup_migrate": "^5.0@RC",
         "drupal/better_exposed_filters": "^6.0",
-        "drupal/bootstrap5": "^3.0",
+        "drupal/bootstrap5": "^4.0@alpha",
         "drupal/captcha": "^1.2",
-        "drupal/core-composer-scaffold": "^9.1",
-        "drupal/core-project-message": "^9.1",
-        "drupal/core-recommended": "^9.1",
-        "drupal/core-vendor-hardening": "^9.1",
+        "drupal/core-composer-scaffold": "^10",
+        "drupal/core-project-message": "^10",
+        "drupal/core-recommended": "^10",
+        "drupal/core-vendor-hardening": "^10",
         "drupal/ctools": "^3.6",
-        "drupal/download_count": "^2.0",
         "drupal/honeypot": "^2.1",
         "drupal/httpswww": "^2.1",
         "drupal/pathauto": "^1.8",
@@ -35,6 +35,7 @@
         "drupal/responsive_menu": "^4.4",
         "drupal/rules": "3.x-dev@dev",
         "drupal/token": "^1.9",
+        "drupal/upgrade_status": "^4.0",
         "drupal/webform": "^6.0"
     },
     "conflict": {
@@ -48,10 +49,14 @@
             "composer/installers": true,
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
-            "drupal/core-vendor-hardening": true
+            "drupal/core-vendor-hardening": true,
+            "cweagans/composer-patches": true
         }
     },
     "extra": {
+        "enable-patching": true,
+        "patches": {
+        },
         "drupal-scaffold": {
             "locations": {
                 "web-root": "./"
