--- a/sync/core.extension.yml
+++ b/sync/core.extension.yml
@@ -11,7 +11,6 @@ module:
   block_content: 0
   breakpoint: 0
   ckeditor5: 0
-  comment: 0
   config: 0
   contact: 0
   contextual: 0
@@ -45,6 +44,7 @@ module:
   path: 0
   path_alias: 0
   pfdp: 0
+  phpass: 0
   responsive_image: 0
   rules: 0
   search: 0
