--- a/sync/user.role.authenticated.yml
+++ b/sync/user.role.authenticated.yml
@@ -6,9 +6,9 @@ dependencies:
     - filter.format.basic_html
     - node.type.patch
   module:
-    - comment
     - contact
     - download_count
+    - file
     - filter
     - media
     - node
@@ -23,15 +23,13 @@ label: 'Authenticated user'
 weight: 1
 is_admin: false
 permissions:
-  - 'access comments'
   - 'access content'
   - 'access shortcuts'
   - 'access site-wide contact form'
   - 'bypass pfdp'
   - 'create patch content'
-  - 'post comments'
+  - 'delete own files'
   - 'search content'
-  - 'skip comment approval'
   - 'use text format basic_html'
   - 'view download counts'
   - 'view media'
